--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -13,12 +14,6 @@
         android:theme="@style/Theme.ProyectoAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".Vista.CrudTiendasFragmen"
-            android:exported="false" />
-        <activity
-            android:name=".Vista.CrudReglasFragment"
-            android:exported="true" />
-        <activity
             android:name=".Vista.MenuAdmin"
             android:exported="true">
             <intent-filter>
@@ -27,12 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".tabla"
-            android:exported="true" />
-        <activity
-            android:name=".Vista.MainActivity"
-            android:exported="true" />
+
     </application>
 
 </manifest>
